--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ quikdecision = { git = "https://github.com/gwadej/quikdecision_rust" }
 hyper = "0.12"
 futures = "0.1.25"
 serde_json = "1.0"
+percent-encoding = "1.0.1"
 
 [lib]
 name = "qdweb"
