--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "quikdecision-web"
-version = "0.7.0"
+version = "0.7.5"
 authors = ["G. Wade Johnson <gwadej@anomaly.org>"]
 description = "Make random decisions using one of a few different methods."
 readme = "README.md"
 keywords = ["decisions", "random", "coin flip", "dice roll"]
 categories = ["command-line-utilities", "games"]
 license = "MIT"
+edition = "2018"
 
 [dependencies]
 
